--- a/templates/article_delete.html
+++ b/templates/article_delete.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 
+{% block title %}Delete Article{% endblock title %}
+
 {% block content %}
     <h1>Delete</h1>
     <form action="" method="post">
