--- a/templates/article_detail.html
+++ b/templates/article_detail.html
@@ -1,4 +1,7 @@
 {% extends "base.html" %}
+{% load crispy_forms_tags %}
+
+{% block title %}{{ article.title }}{% endblock title %}
 
 {% block content %}
     <div class="article-entry">
@@ -6,7 +9,33 @@
         <p>by {{ article.author }} | {{ article.created_at }}</p>
         <p>{{ article.context }}</p>
     </div>
-    <p><a href="{% url 'article_edit' article.pk %}">Edit</a> |
-        <a href="{% url 'article_delete' article.pk %}">Delete</a></p>
-    <p>Back to <a href="{% url 'article_list' %}">All Articles</a>.</p>
+    <p>
+        <a href="{% url 'article_edit' article.pk %}">Edit</a> |
+        <a href="{% url 'article_delete' article.pk %}">Delete</a>
+    </p>
+    <!-- <p>
+        Back to <a href="{% url 'article_list' %}">All Articles</a>.
+    </p> -->
+    
+    <hr>
+    <h4>Comments</h4>
+    {% for comment in article.comment_set.all %}
+        <div class="card mb-4">
+            <div class="card-body">
+                <p>{{ comment }}</p>
+                <div class="d-flex justify-content-between">
+                    <div class="d-flex flex-row align-items-center">
+                        <p class="small mb-0 ms-2">{{ comment.author }}</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    {% endfor %}
+    <h4>Add a Comment</h4>
+    <form action="" method="post">
+        {% csrf_token %}
+        {{ form|crispy }}
+        <button class="btn btn-success ml-2" type="submit">Comment</button>
+    </form>
+    <br>
 {% endblock content %}
