--- a/templates/article_edit.html
+++ b/templates/article_edit.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 {% load crispy_forms_tags %}
 
+{% block title %}Edit Article{% endblock title %}
+
 {% block content %}
     <h1>Edit</h1>
     <form action="" method="post">
