--- a/templates/article_list.html
+++ b/templates/article_list.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Articles{% endblock title %}
+{% block title %}Kyusk Articles{% endblock title %}
 
 {% block content %}
     {% for article in article_list %}
