--- a/templates/article_new.html
+++ b/templates/article_new.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 {% load crispy_forms_tags %}
 
+{% block title %}New Article{% endblock title %}
+
 {% block content %}
     <h1>New article</h1>
     <form action="" method="post">
